# Interviews

./: FounderNext.ipynb  README.md  Upflowy.ipynb
AHRef/: main.ipynb
Flowie/: README.md  main.py  request.py
FounderNest/: preprocessed_df.csv
GaussLabs/: gauss_labs_trial.ipynb
Mojo/: README.md  cleaned_notebook.ipynb
Mojo/tests/loaders/: test_json.py
Picnic/: trial.ipynb
QRT/: QRT.ipynb
Rappi/: .gitignore  README.md  main.ipynb  main.py  makefile  pyproject.toml
Rappi/code/estimators/: baseline.py
Rappi/code/evaluation/: base_evaluator.py
Rappi/code/prediction/: base_predictor.py
Rappi/code/preprocessors/: baseline.py
Rappi/code/training/: base_trainer.py
Rappi/tests/estimators/: test_baseline.py
Rappi/tests/evaluation/: test_baseline.py
Rappi/tests/preprocessors/: test_baseline.py
Rappi/tests/training/: test_baseline.py
beavr/: README.md
beavr/beavr_app/: crud.py  main.py
beavr/beavr_app/templates/: documents.html
company1/: company1.ipynb
company10/: .gitignore  README.md  main.py  nb.ipynb  pyproject.toml  rundown.md
company10/data/: La_Fortune_des_Rougon.txt
company10/data/splits/: consolidated_names.txt  consolidated_relationships.txt  graphviz_output.dot  graphviz_output2.dot
company10/data/splits/0/: desambiguated_text.txt  extracted_names.txt  relationships.txt  text.txt
company10/data/splits/1/: desambiguated_text.txt  extracted_names.txt  relationships.txt  text.txt
company10/data/splits/10/: desambiguated_text.txt  extracted_names.txt  relationships.txt  text.txt
company10/data/splits/11/: desambiguated_text.txt  extracted_names.txt  relationships.txt  text.txt
company10/data/splits/12/: desambiguated_text.txt  extracted_names.txt  relationships.txt  text.txt
company10/data/splits/13/: desambiguated_text.txt  extracted_names.txt  relationships.txt  text.txt
company10/data/splits/14/: desambiguated_text.txt  extracted_names.txt  relationships.txt  text.txt
company10/data/splits/15/: desambiguated_text.txt  extracted_names.txt  relationships.txt  text.txt
company10/data/splits/16/: desambiguated_text.txt  extracted_names.txt  relationships.txt  text.txt
company10/data/splits/17/: desambiguated_text.txt  extracted_names.txt  relationships.txt  text.txt
company10/data/splits/18/: desambiguated_text.txt  extracted_names.txt  relationships.txt  text.txt
company3/: company3.ipynb  environment.yml  environment_simplified.yml
company6/: company6.ipynb
company7/: Dockerfile  README.md  app.db  app_test.db  docker-compose.yml  notebook.ipynb  pyproject.toml
company7/app/: database.py  load.py  models.py  schemas.py
company7/app/api/: endpoints.py
company7/app/templates/: requirements.html
company7/samples/: sample_data.xlsx
company8/: Dockerfile  README.md  docker-compose.yml
company8/src/api/: endpoints.py
company8/src/databases/: embedding_db.py
company8/src/etl/: extraction.py  handlers.py
company8/src/orm_models/: models.py
company8/src/query/: handlers.py
company8/tests/databases/: test_content_db.py
company8/tests/etl/: test_extraction.py
company9/: README.md  cleaned_notebook.ipynb  config.example.cfg  notebook.ipynb  pyproject.toml
company9/src/: main.py
company9/src/loaders/: json.py
company9/src/qa/: basic_qa.py
company9/src/summarizers/: short.py
digital dandelion/: README.md  assignment.md  digital_dandelion_notebook.ipynb  segment_info.json
elqano/: test.ipynb
equativ/: equativ.ipynb
linkup/: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
linkup/src/api/: endpoints.py
linkup/src/databases/: content_db.py  dependency_injection.py  embedding_db.py  metadata_db.py
linkup/src/etl/: extraction.py  handlers.py  transformation.py
linkup/src/query/: handlers.py
linkup/src/static/: index.html
linkup/src/static/css/: style.css
linkup/src/static/js/: script.js
linkup/tests/api/: test_live_api.py
ramdam/: .gitignore  README.md  pyproject.toml  requirements.txt  test.ipynb
ramdam/src/api/: api.py  data_classes.py
ramdam/src/model/: predict.py  preprocessing.py  train.py
text_classification/: README.md  data_exploration.ipynb  environment.yml  main.ipynb  pyproject.toml  text_embedding_exploration.ipynb
text_classification/src/preprocessors/: __init__.py  category_processor.py  numerical_processor.py  remover_processor.py  text_processor.py
text_classification/tests/: test_text_processor.py
vocca_test/: .env.example  .gitignore  README.md  requirements.txt
vocca_test/src/: app.py  imdb_example.py
(+53 files in other folders)
