[tool.poetry]
name = "beavr_app"
version = "0.1.0"
description = ""
authors = ["Benjamin LAZARD <benjamin.lazard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
SQLAlchemy = "^2.0.35"
uvicorn = "^0.30.6"
pydantic = "^2.9.2"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pymysql = "^1.1.1"
jinja2 = "^3.1.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["I"]
