[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Benjamin LAZARD <benjamin.lazard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
h5py = "^3.12.1"
uvicorn = "^0.31.1"
pydantic = "^2.9.2"
fastapi = "^0.115.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.35"
pymongo = "^4.10.1"
chromadb = "^0.5.13"
sentence-transformers = "^3.2.0"
feedparser = "^6.0.11"
scrapy = "^2.11.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
ipykernel = "^6.29.5"
pytest-mock = "^3.14.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["I"]
