[project]
name = "ramdam_demo"
version = "0.1.0"
description = "A demo project for Ramdam interview process"
# authors = ["B. L."]
readme = "README.md"
license = "MIT"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
select = ["ALL"]
ignore = ["N806", "PD901", "S301", "D417", "D100", "ERA001", "T201"]  
target-version = "py312"
extend-select = ["I001"]  # Ensures imports are sorted
